# pypeaks

./: .gitignore  CHANGES.txt  MANIFEST.in  README.md  README.rst  intervals.py  peakDetection.py  peak_detection.py  pyproject.toml  setup.py
data/: ji-intervals.pickle  sample-histogram.pickle
examples/: howto.ipynb  sample-histogram.pickle
pypeaks/: __init__.py  data.py  intervals.py  slope.py
pypeaks/examples/: howto.py
src/: histogram.py  slope.py
